--- a/hallway-info-screen/package.json
+++ b/hallway-info-screen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hallway-info-screen",
-  "homepage": "https://Nightingale1997.github.io//hallway-info-screen",
+  "homepage": "https://Nightingale1997.github.io/hallway-info-screen",
   "private": true,
   "version": "0.0.0",
   "type": "module",
