--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - run: cd hallway-interface
       - run: npm install
       - run: npm test
