--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,20 @@
-name: CI
+name: Run Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: cd hallway-interface
-      - run: npm install
-      - run: npm test
+          node-version: '18'
+      - name: Install dependencies
+        working-directory: hallway-interface
+        run: npm install
